--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -3,8 +3,8 @@
   "plugins": ["stylelint-scss", "stylelint-csstree-validator"],
   "rules": {
     "at-rule-no-unknown": null,
-    "scss/at-rule-no-unknown": true
-    
+    "scss/at-rule-no-unknown": true,
+    "csstree/validator": true
   },
   "ignoreFiles": ["build/**", "dist/**", "**/reset*.css", "**/bootstrap*.css"]
 }
